unpackaged/main/default/objects/TAP_Inbox__c/TAP_Inbox__c.object-meta.xml
<CustomObject>
    <label>TAP Inbox</label>
    <nameField>
        <displayFormat>TAP Inbox-{0000000}</displayFormat>
        <label>TAP Inbox Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAP Inbox</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>