unpackaged/main/default/objects/TAP_Inbox__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>Komen_Fax_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>