unpackaged/main/default/objects/TAP_Inbox__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From: Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>