unpackaged/main/default/objects/TAP_Inbox__c/recordTypes/Sample_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sample_Record_Type</fullName>
    <active>false</active>
    <label>Sample Record Type</label>
</RecordType>