unpackaged/main/default/objects/TAP_Inbox__c/listViews/Pending_TAP_Inboxes.listView-meta.xml
<ListView>
    <fullName>Pending_TAP_Inboxes</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending TAP Inboxes</label>
    <sharedTo>
        <roleAndSubordinatesInternal>TAP_Mission</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Program_Owner</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>